[package]
name = "backend"
version = "0.1.0"
authors = ["Curstantine <curstantine@gmail.com>"]
default-run = "backend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
futures = "0.3.28"
ulid = "1.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

blake3 = { version = "1.5.0", features = ["std", "serde"] }
image = { version = "0.24.7", features = ["png", "webp", "jpeg"] }
once_cell = "1.18.0"
regex = "1.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.bonsaidb]
git = "https://github.com/khonsulabs/bonsaidb/"
branch = "main"
features = ["local", "async", "compression"]

[dependencies.symphonia]
version = "0.5.3"
features = ["all-codecs", "all-formats"]

[dependencies.tauri]
version = "1.4.0"
features = [
	"protocol-asset",
	"dialog-save",
	"dialog-open",
	"dialog-message",
	"dialog-confirm",
	"dialog-ask",
	"fs-read-file",
	"fs-read-dir",
	"fs-create-dir",
	"fs-exists",
	"fs-write-file",
	"path-all",
	"window-close",
	"window-set-closable",
	"window-create",
	"window-minimize",
	"window-unminimize",
	"window-show",
	"window-unmaximize",
	"window-start-dragging",
	"window-maximize",
	"window-hide",
	"window-set-cursor-grab",
	"window-set-cursor-icon",
]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
