[package]
name = "app"
version = "0.1.0"
authors = ["you"]
default-run = "app"
edition = "2021"
license = ""
repository = ""
rust-version = "1.60"
description = "A Tauri App"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4.0", features = [ "dialog-save", "dialog-open", "dialog-message", "dialog-confirm", "dialog-ask", "fs-read-file", "fs-read-dir", "fs-create-dir", "fs-exists", "fs-write-file", "path-all", "window-close", "window-set-closable", "window-create", "window-minimize", "window-unminimize", "window-show", "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "window-set-cursor-grab", "window-set-cursor-icon"] }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
